--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     ]
   },
   "dependencies": {
+    "axios": "^0.14.0",
     "babel-cli": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "electron-prebuilt": "^0.36.0",
+    "json-loader": "^0.5.4",
     "menubar": "^4.1.0"
   },
   "devDependencies": {
